Mon Nov 10 17:02:37 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Stream.i:

          Added cast to ACE_CDR::Boolean of return values where necessary in
          extraction methods, similarly to what is already in insertion
          methods. Thanks to Ted Mules <ned@technisyst.com.au> for the 
          resulting warnings on MSVC at warning level 4. This closes
          [BUGID:1632].

Mon Nov 10 16:43:19 2003  Steve Huston  <shuston@riverace.com>

	* ace/Acceptor.cpp: Add #include "ace/OS_NS_stdio.h" to get sprintf()
	  and "ace/OS_NS_string.h" to get strdup().

	* ace/Svc_Conf_l.cpp: Add #include "ace/OS_NS_string.h" for strrchr().

	* ace/Synch_Traits.h: Add #include "ace/config-all.h" to find the
	  template and threads config settings.

	* ace/RMCast/RMCast_UDP_Proxy.cpp:
	* ace/RMCast/RMCast_IO_UDP.i: Added #include "ace/OS_Memory.h" to
	  get ACE_NEW_RETURN.

	* netsvcs/lib/Log_Message_Receiver.h: Add #include of either
	  "ace/Thread_Mutex.h" or "ace/Null_Mutex.h" for the ACE_Guard
	  template arg (ACE_SYNCH_MUTEX_T).

	* netsvcs/lib/TS_Clerk_Handler.h: Add #include
	  "ace/os_include/os_dirent.h" to get MAXNAMLEN.

	* netsvcs/lib/TS_Clerk_Handler.cpp: Add #include
	  "ace/OS_NS_string.h" to get strcat() and "ace/OS_NS_stdio.h" to
	  get sprintf().

	* netsvcs/lib/Client_Logging_Handler.cpp: Add #include
	  "ace/OS_NS_stdio.h" to get ACE_OS::sprintf().

	* netsvcs/lib/Name_Handler.cpp: Add #include "ace/OS_NS_string.h" to
	  get ACE_OS::strlen().

	* netsvcs/clients/Naming/Client/Client_Test.cpp: Add #include
	  "ace/OS_NS_stdio.h" for ACE_OS::fgets(), "ace/OS_NS_unistd.h"
	  for ACE_OS::getpid(), "ace/OS_NS_string.h" for strtok(), and
	  "ace/os_include/os_ctype.h" for isupper()/tolower().

	* netsvcs/client/Naming/Dump_Restore/Dump_Restore.cpp: Add #include
	  "ace/OS_NS_string.h", "ace/OS_NS_stdio.h", and "ace/OS_NS_unistd.h"
	  to get missing ACE_OS functions.

	* tests/Service_Config_DLL.cpp: Add #include "ace/OS_NS_string.h" and